Add an intro card at the start of the questions